model_evaluation.py added

--- a/notebooks/21_HYPERPARAMETER_TUNING.ipynb
+++ b/notebooks/21_HYPERPARAMETER_TUNING.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,10 +147,10 @@
     "model_opt_dir = \"../model/production\"\n",
     "if optimized_mae < baseline_mae:\n",
     "    model_opt_path = f\"{model_opt_dir}/xgb_hyp{datetime.now().strftime('%Y%m%d-%H%M')}_mae_{optimized_mae:.1f}.pkl\"\n",
+    "    joblib.dump(optimized_model, model_opt_path)\n",
     "else:\n",
     "    model_opt_path = f\"{model_opt_dir}/xgb_base{datetime.now().strftime('%Y%m%d-%H%M')}_mae_{baseline_mae:.1f}.pkl\"\n",
-    "    \n",
-    "joblib.dump(optimized_mae, model_opt_path)\n",
+    "    joblib.dump(model, model_opt_path)\n",
     "\n",
     "print(f\"\"\"\n",
     "Comparative Results:\n",
